# orcc

./: .gitattributes  .gitignore  .project  .travis.yml  CHANGELOG.md  CHANGES  CMakeLists.txt  INSTALL  README  README.md  TODO  index.php  rsync_frontend_mwipliez.sh  rsync_javadoc_mwipliez.sh
projects/CMake/: CMakeLists.txt  README  TODO.txt  Test Sequences MPEG4-part10.xls  remove_generated_C_files.bat  test_avc_baseline.bat  test_avc_baseline.command  test_avc_baseline_compare.command  test_avc_frext.sh  test_cabac.command  test_mpeg4.bat  test_mpeg4.command
projects/CMake/AVC_CBP_Decoder/: CMakeLists.txt
projects/CMake/AVC_CBP_Decoder_Compare/: CMakeLists.txt
projects/CMake/C++_MPEG4_SP_Decoder_Serial/: CMakeLists.txt
projects/CMake/MPEG2/: CMakeLists.txt
projects/CMake/MPEG4_SP_Decoder/: CMakeLists.txt
projects/CMake/MPEG4_SP_Decoder_Serial/: CMakeLists.txt
projects/CMake/MPEG4_SP_Decoder_Serial_new_motion/: CMakeLists.txt
projects/CMake/RVC_MPEG4_SP_Decoder/: CMakeLists.txt
projects/CMake/RVC_MPEG4_SP_Decoder_Compare/: CMakeLists.txt
projects/CMake/Seam_carving/: CMakeLists.txt
projects/CMake/include/libcpp-epfl-aka/: CalOrientedBoundedFifo.h  actoraka.h  fifoFanOut.h  fifoapi.h  stringaka.h
projects/CMake/include/liborcc/: json_reader.h  lock_free_fifo.h  orcc_util.h
projects/CMake/lib/: CMakeLists.txt
projects/CMake/lib/include/: Actor_img_display.h  Actor_img_read.h  Actor_source.h  CalOrientedBoundedFifo.h  FifoFactory.h  fifo.h  fifo.inc.h  fifo.inl  fifoFanOut.h  fifo_generic.h  fifo_generic.inl  lock_free_fifo.h  orcc.h  orcc_fifo.h  orcc_generic_fifo.h  orcc_genetic.h  orcc_scheduler.h  orcc_scheduler.inl  orcc_thread.h  orcc_trace.h  orcc_trace.inl  orcc_util.h  scheduler.h  scheduler.inl  trace.h  trace.inl  traceaka.h
projects/CMake/lib/libcjson/: cJSON.c
projects/CMake/lib/libcpp-epfl-aka/: fifoFanOut.cpp  traceaka.cpp
projects/CMake/lib/liborcc/: json_reader.c  orcc_util.c
projects/CMake/lib/src/: Actor_display.cpp  Actor_source.cpp  cJSON.c  compareyuv.c  display.c  fifo.c  genetic.c  img_display.c  img_read.c  orcc_util.c  scheduler.c  sink.c  source.c  source_no_loop.c  thread.c  traceaka.cpp  writer.c
projects/CMake/modules/: FindAPR.cmake
projects/CMake/windows/: cmake-VS-2005.bat  cmake-VS-2008.bat  cmake-msys.sh  cmake.bat  cmake.command
projects/Jade/: CMakeLists.txt  COMMAND  Jade.cpp  JadeTools.cpp  README  Toolbox.cpp  cmake.bat
projects/Jade/GPAC/rvc_dec/: Makefile  rvc_dec.c  rvc_dec.vcproj
projects/Jade/VTL/System/: Compare  Compare.s  Display  Display.bc  Display.s  Extern  Extern.s  FifoCircular  FifoCircular.bc  FifoCircular.s  FifoTrace  FifoTrace.s  Source  Source.s  UnprotectedFifo.bc  UnprotectedFifo.s
projects/Jade/doc/: CMakeLists.txt  doxy.config.in
projects/Jade/include/Jade/: Decoder.h  DecoderEngine.h  JIT.h  RVCEngine.h  XDFParser.h
projects/Jade/lib/Actor/: Action.cpp  Broadcast_char.c  Broadcast_int.c  Broadcast_long.c  Broadcast_short.c  CMakeLists.txt  FSM.cpp  IRParser.cpp
projects/Jade/lib/BSDLParser/: BSDLParser.cpp  BSDLParser.h
projects/Jade/lib/Compression/: CMakeLists.txt  adler32.c  crc32.c  deflate.c  gzclose.c  gzlib.c  gzread.c  gzwrite.c  infback.c  inffast.c  inflate.c  inftrees.c  trees.c  zutil.c
projects/Jade/lib/ConfigurationEngine/: CMakeLists.txt  Configuration.cpp  ConfigurationEngine.cpp  Connector.cpp  Connector.h  Initializer.cpp  Initializer.h  Instantiator.cpp  Reconfiguration.cpp  Reconfiguration.h  ReconfigurationScenario.cpp  Scenario.cpp
projects/Jade/lib/Decoder/: BroadcastActor.cpp  BroadcastActor.h  BroadcastAdder.cpp  BroadcastAdder.h  CMakeLists.txt  Decoder.cpp  InstancedActor.cpp  Instanciator.cpp  Instanciator.h  Procedure.cpp  SolveParameters.cpp  SolveParameters.h
projects/Jade/lib/DecoderEngine/: CMakeLists.txt  Constant.h  Decoder.cpp  DecoderEngine.cpp  DisplayActor.cpp  DisplayActor.h  FifoCircular.cpp  Instantiator.cpp  Instantiator.h  Options.h  SourceActor.cpp  SourceActor.h  UnprotectedFifo.cpp  UnprotectedFifo.h  option.h
projects/Jade/lib/Fifo/: AbstractConnector.cpp  AbstractFifo.cpp  CMakeLists.txt  CircularConnector.cpp  FifoCircular.cpp  FifoTrace.cpp  TraceConnector.cpp  UnprotectedConnector.cpp  UnprotectedFifo.cpp  fifoTrace.h
projects/Jade/lib/Graph/: CMakeLists.txt  HDAGEdge.cpp  HDAGGraph.cpp
projects/Jade/lib/IRActor/: BroadcastActor.cpp  BroadcastAdder.cpp  CMakeLists.txt  Display.cpp  Source.cpp
projects/Jade/lib/IRCore/: Action.cpp  ActionScheduler.cpp  Actor.cpp  CMakeLists.txt  Connection.cpp  CoreUtil.cpp  Expression.cpp  FSM.cpp  Instance.cpp  InstancedActor.cpp  Network.cpp  Package.cpp  Pattern.cpp  Procedure.cpp
projects/Jade/lib/IRJit/: CMakeLists.txt  LLVMExecution.cpp  LLVMOptimizer.cpp  LLVMParser.cpp  LLVMUtility.cpp  LLVMWriter.cpp
projects/Jade/lib/IRMerger/: CMakeLists.txt  CheckPinoRules.cpp  CheckPinoRules.h  Merger.cpp  Rational.cpp  SuperInstance.cpp
projects/Jade/lib/IROptimize/: CMakeLists.txt  FifoFnRemoval.cpp  InstanceInternalize.cpp
projects/Jade/lib/IRReconfigure/: CMakeLists.txt  ReconfigurationScenario.cpp
projects/Jade/lib/IRSerialize/: CMakeLists.txt  IRConstant.h  IRLinker.cpp  IRParser.cpp  IRUnwriter.cpp  IRWriter.cpp
projects/Jade/lib/IRTransform/: ActionSchedulerAdder.cpp  BroadcastAdder.cpp  CMakeLists.txt
projects/Jade/lib/IRUtil/: CMakeLists.txt  CompressionMng.cpp  FifoMgn.cpp  FifoMng.cpp  OptionMgn.cpp  PackageMgn.cpp  PackageMng.cpp
projects/Jade/src/: CMakeLists.txt
projects/Jade/src/GPAC/: README
projects/Jade/tools/: Compare.bc  Compare.s  Display.bc  Display.s  Extern.bc  Extern.s  FifoCircular.bc  FifoCircular.s  FifoTrace.bc  FifoTrace.s  Nodisplay.bc  Nodisplay.s  Source.bc  Source.s  UnprotectedFifo.bc  UnprotectedFifo.s  display.bc  display.s  extern.bc  extern.s  fifoTrace.bc  fifoTrace.s  nodisplay.bc  nodisplay.s  source.bc  source.s
src/: CMakeLists.txt  dataflow.c  graph.c  main.c  mapping.c  mapping.h  options.c  options.h  orcc-graph.c  orcc-graph.h  orcc-map.c  orccmap.c  orccmap.h  serialize.c  serialize.h  util.c  util.h
(+7988 files in other folders)
