add_executable (AVC_CBP_Decoder_Compare
Algo_Add.c
Algo_Add_01.c
Algo_Add_01_01.c
Algo_Add_02.c
Algo_Add_03.c
Algo_Add_16x16.c
Algo_Add_4x4.c
Algo_Add_4x4_01.c
Algo_BlockExpand_AVC.c
Algo_BlockSplit_AVC.c
Algo_DBF.c
Algo_DBF_01.c
Algo_DBF_02.c
Algo_DCR_Hadamard_CHROMA.c
Algo_DCR_Hadamard_CHROMA_01.c
Algo_DCR_Hadamard_LUMA_IHT1d_0.c
Algo_DCR_Hadamard_LUMA_IHT1d_1.c
Algo_DCR_Hadamard_LUMA_Reordering.c
Algo_DCR_Hadamard_LUMA_Scaling.c
Algo_DC_Transpose4x4_0.c
Algo_DC_Transpose4x4_1.c
Algo_Interp_EighthPelBilinear.c
Algo_Interp_EighthPelBilinear_01.c
Algo_Interp_SeparableSixTapQuarterPelAVC.c
Algo_Interp_split_MB.c
Algo_Interp_split_MB_C.c
Algo_Interp_split_MB_C_01.c
Algo_IntraPred_CHROMA.c
Algo_IntraPred_CHROMA_01.c
Algo_IntraPred_LUMA_16x16.c
Algo_IntraPred_LUMA_4x4.c
Algo_IntraPred_Split.c
Algo_IQ_QSAndSLAndIDCTScaler_4x4.c
Algo_IQ_QSAndSLAndIDCTScaler_4x4_01.c
Algo_IQ_QSAndSLAndIDCTScaler_4x4_02.c
Algo_IS_Zigzag_4x4.c
Algo_IS_Zigzag_4x4_01.c
Algo_IS_Zigzag_4x4_AC.c
Algo_IS_Zigzag_4x4_DC.c
Algo_IT4x4_1d_0.c
Algo_IT4x4_1d_0_01.c
Algo_IT4x4_1d_0_02.c
Algo_IT4x4_1d_1.c
Algo_IT4x4_1d_1_01.c
Algo_IT4x4_1d_1_02.c
Algo_IT4x4_Addshift.c
Algo_IT4x4_Addshift_01.c
Algo_IT4x4_Addshift_02.c
Algo_Merge_4x4_to_16x16.c
Algo_Merge_4x4_to_16x16_norasterscan.c
Algo_Merge_4x4_to_8x8.c
Algo_Merge_4x4_to_8x8_01.c
Algo_MMCO.c
Algo_MVR_MultiFrameAdptive.c
Algo_NALU.c
Algo_Split_16x16_to_4x4_norasterscan.c
Algo_Synp_AVC.c
Algo_Transpose4x4_0.c
Algo_Transpose4x4_0_01.c
Algo_Transpose4x4_0_02.c
Algo_Transpose4x4_1.c
Algo_Transpose4x4_1_01.c
Algo_Transpose4x4_1_02.c
Buffer_inter.c
Buffer_inter_01.c
Buffer_inter_02.c
Buffer_Neighbour_4x4.c
Buffer_Neighbour_FullMb.c
Buffer_Neighbour_FullMb_01.c
Buffer_Neighbour_FullMb_02.c
byte2bit.c
Merger.c
Mgnt_DBF.c
Mgnt_DBF_01.c
Mgnt_DBF_02.c
Mgnt_Interp_FBAddr_Chroma_MxN.c
Mgnt_Interp_FBAddr_Chroma_MxN_01.c
Mgnt_Interp_FBAddr_Luma_MxN.c
Mgnt_Intra4x4.c
Mgnt_Intra_16x16.c
Mgnt_Intra_8x8.c
Mgnt_Intra_8x8_01.c
Mgnt_IQ_Chroma.c
Mgnt_IQ_Chroma_01.c
Mgnt_IQ_INTRA16x16.c
Mgnt_MVR.c
Orcc_AVC_CBP_decoder_compare.c
Select.c
Select_chroma.c
Select_chroma_01.c
)

target_link_libraries(AVC_CBP_Decoder_Compare liborcc ${APR_LIBRARY} ${SDL_LIBRARY})
