add_executable (RVC_MPEG4_SP_Decoder_Compare
add.c
address.c
addressing.c
addressing_01.c
addressing_02.c
address_01.c
address_02.c
add_01.c
add_02.c
blkexp.c
buffer.c
buffer_01.c
buffer_02.c
clip.c
clip_01.c
clip_02.c
column.c
column_01.c
column_02.c
DCsplit.c
DCsplit_01.c
DCsplit_02.c
GEN_mgnt_Merger420.c
IAP.c
IAP_01.c
IAP_02.c
interpolation.c
interpolation_01.c
interpolation_02.c
invpred.c
invpred_01.c
invpred_02.c
IQ.c
IQ_01.c
IQ_02.c
IS.c
IS_01.c
IS_02.c
mvrecon.c
mvseq.c
orcc_testbed_compare.c
parseheaders.c
retranspose.c
retranspose_01.c
retranspose_02.c
row.c
row_01.c
row_02.c
scale.c
scale_01.c
scale_02.c
serialize.c
shift.c
shift_01.c
shift_02.c
splitter_420_B.c
splitter_BTYPE.c
splitter_MV.c
splitter_Qp.c
transpose.c
transpose_01.c
transpose_02.c
)

target_link_libraries(RVC_MPEG4_SP_Decoder_Compare liborcc ${SDL_LIBRARY})
