# Packages required
find_package(SDL)

IF (NOT SDL_FOUND)
	find_program(SDL_CONFIG sdl-config ${SDL_INSTDIR} DOC "path to sdl-config tool")
	IF(NOT SDL_CONFIG STREQUAL "SDL_CONFIG-NOTFOUND" )
		string(REPLACE "sdl-config" "" SDL_DIR ${SDL_CONFIG})
	
		set(SDL_INSTDIR ${SDL_DIR} CACHE PATH "SDL installation directory" FORCE)
	
		EXECUTE_PROCESS(COMMAND ${SDL_CONFIG} --libs OUTPUT_VARIABLE SDL_LIBRARY OUTPUT_STRIP_TRAILING_WHITESPACE)
		EXECUTE_PROCESS(COMMAND ${SDL_CONFIG} --cflags OUTPUT_VARIABLE SDL_INCLUDE_DIR OUTPUT_STRIP_TRAILING_WHITESPACE)
		SEPARATE_ARGUMENTS(SDL_LIBRARY)
		SEPARATE_ARGUMENTS(SDL_INCLUDE_DIR)
	ENDIF(NOT SDL_CONFIG STREQUAL "SDL_CONFIG-NOTFOUND" )
ENDIF (NOT SDL_FOUND)

include_directories(${JADE_MAIN_INCLUDE_DIR} ${LLVM_INCLUDE_DIRS} ${SDL_INCLUDE_DIR})

add_definitions(${LLVM_CPP_FLAGS} ${JADE_CPP_FLAGS})

add_library (IRActor
  BroadcastActor.cpp
  BroadcastAdder.cpp
  Display.cpp
  FileSrc.cpp
  GpacSrc.cpp
 )